--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "@react-google-maps/api": "^2.20.5",
     "@syncfusion/ej2-react-calendars": "^28.2.3",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
@@ -26,6 +27,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-calendar": "^5.1.0",
     "react-date-range": "^2.0.1",
     "react-datepicker": "^7.6.0",
     "react-day-picker": "^8.10.1",
@@ -34,7 +36,8 @@
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-medium-image-zoom": "^5.2.13",
-    "react-slick": "^0.30.3",
+    "react-phone-number-input": "^3.4.11",
+    "react-slick": "^0.29.0",
     "react-time-picker": "^7.0.0",
     "react-toastify": "^11.0.3",
     "shadcn-ui": "^0.9.4",
@@ -47,7 +50,9 @@
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
     "@types/react": "^19",
+    "@types/react-date-range": "^1.4.9",
     "@types/react-dom": "^19",
+    "@types/react-slick": "^0.23.13",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
